# download-module

./: README.md  main.py  pyproject.toml
download_module/: __init__.py  const.py  direct_requests.py  find_diff_path.py
download_module/exceptions/: __init__.py
tests/: test1.py  test2.py
