[project]
name = "download-module"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "time-module",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
time-module = { git = "https://github.com/yaiyaiyank/time-module" }
